kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations:
    kubernetes.io/change-cause: "Replica increased to 3 and nginx to latest version."
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxapp
  template:
    # this is same as the pod specification
    metadata:
      name: nginx-pod
      labels:
        app: nginxapp
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
