kubernetes/nginx2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod2
  labels:
    team: devops2
spec: 
  containers:
    - name: nginx-pod2cont
      image: nginx
      ports: 
        - containerPort: 80
