kubernetes/portfolio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      name: nginx-pod
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio-container
          image: rishicollinz/portfolio:v1
          ports:
            - containerPort: 8080
