kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginxapp
  ports: #mandatory
    - port: 80 # on which service will receive request
      targetPort: 80 # port no of the container in the pod
      nodePort: 30001
