kubernetes/portfolio-service.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: portfolio-service
spec:
  type: NodePort
  selector:
    app: portfolio
  ports: 
    - port: 8080
      targetPort: 8080
      nodePort: 30001
