kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name : deployment
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-pod
        image: nginx
        ports:
          - containerPort: 80   
---
apiVersion: v1 
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
