kubernetes/common-ingress.yaml
#this ingress is for path based routing between nginx-service and portfolio-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: common.com
      http:
        paths:
          - path: /nginx/(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service: 
                name: portfolio-service
                port:
                  number: 8080
