kubernetes/host-ingress.yaml
#this ingress is for path based routing between nginx-service and portfolio-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
    - host: nginx-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: common.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: portfolio-service
                port:
                  number: 8080
